# intro-desarrollo-mobil

Parcial1Apps/: CMakeLists.txt  Main.qml  Multiplication.qml  Presentation.qml  ThreeNumbers.qml  main.cpp
Tarea3Ready/: Adder.qml  AppMenu.qml  CMakeLists.txt  Home.qml  Main.qml  MultiplicationTable.qml  NumberTranslator.qml  Video.qml  main.cpp
Tarea5/: CMakeLists.txt  Tarea5.qmlproject  Tarea5.qmlproject.qtds  qmlmodules
Tarea5/content/: About.qml  AboutForm.ui.qml  App.qml  CMakeLists.txt  CharacterDelegate.qml  CharacterDelegateForm.ui.qml  CharacterDetails.ui.qml  Characters.qml  CharactersData.qml  CharactersForm.ui.qml  Cover.qml  CoverForm.ui.qml  Hireme.qml  HiremeForm.ui.qml  InMyLife.qml  MomentDelegate.qml  MomentDelegateForm.ui.qml  MomentDetails.qml  MomentDetailsForm.ui.qml  Moments.qml  MomentsData.qml  MomentsForm.ui.qml
Tarea5/imports/: CMakeLists.txt
Tarea5/imports/Tarea5/: CMakeLists.txt  Constants.qml  qmldir
Tarea5/imports/Tarea5/designer/: plugin.metainfo
Tarea5/src/: app_environment.h  import_qml_plugins.h  main.cpp
Tarea6/: CMakeLists.txt  Tarea6.qmlproject  Tarea6.qmlproject.qtds  qmlmodules
Tarea6/android/: AndroidManifest.xml
Tarea6/content/: Age.qml  App.qml  CMakeLists.txt  DetermineAge.qml  DetermineAgeForm.ui.qml  Gender.qml  Hireme.qml  HiremeForm.ui.qml  Home.ui.qml  MenuData.qml  PredictGender.qml  PredictGenderForm.ui.qml  TechCrunch.qml  TechCrunchDelegate.qml  TechCrunchDelegateForm.ui.qml  TechCrunchForm.ui.qml  Universities.qml  UniversitiesForm.ui.qml  UniversitiesIn.qml  UniversitiesInForm.ui.qml  Weather.qml  (+4 more)
(+6 files in other folders)
